--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ body{
 	background-repeat: no-repeat;
 	background-size: cover;
 	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	padding-top:80px;
 	
 }
 .flex-container {
