--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,8 +11,16 @@ body{
 }
 
 .pf1{
-	background-image:url("../images/fondo3.jpg");
-	
+	background-image:url("../images/fondo3.jpg");	
+}
+
+.lib{
+	background-image:url("https://simplybook.me/uploads/mcstudiophotos/image_files/original/2b84a05d6552f944a9621e19102c5b58.jpg");
+	background-size:cover;
+}
+#formCot{
+	padding:50px;
+	background-color:#f5eff0;
 }
 .flex-container {
   display: flex;
@@ -35,7 +43,7 @@ body{
 
 }
 
-#cotizador{
+/*#cotizador{
 	min-height: 300px;
 	border: 2px dotted firebrick;
 	border-radius: 6px;
@@ -44,11 +52,11 @@ body{
 
 #cotizador div{
 	padding: 10px;
-}
+}*/
 
-#cotizador button{
+/*#cotizador button{
 	color:white;
 	background-color: firebrick;
 	border-radius: 4px;
 	border-color:white;
-}
+}*/
