--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ body{
 }
 
 .lib{
-	background-image:url("https://simplybook.me/uploads/mcstudiophotos/image_files/original/2b84a05d6552f944a9621e19102c5b58.jpg");
+	background-image:url("../images/fondo4.jpg");
 	background-size:cover;
 }
 #formCot{
